--- a/RF_WEB/Views/Shared/_LayoutMain.cshtml
+++ b/RF_WEB/Views/Shared/_LayoutMain.cshtml
@@ -43,11 +43,11 @@
         <div id="iframe_box" class="Hui-article">
             <div class="show_iframe">
                 <div style="display:none" class="loading"></div>
-                <iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>
+                @*<iframe scrolling="yes" frameborder="0" src="welcome.html"></iframe>*@
+                @RenderBody()
             </div>
         </div>
     </section>
-
     <div class="contextMenu" id="Huiadminmenu">
         <ul>
             <li id="closethis">关闭当前 </li>
@@ -55,73 +55,5 @@
         </ul>
     </div>
     @RenderPage("_footer.cshtml")
-    <!--请在下方写此页面业务相关的脚本-->
-    <script type="text/javascript" src="~/Content/lib/jquery.contextmenu/jquery.contextmenu.r2.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            /*$("#min_title_list li").contextMenu('Huiadminmenu', {
-                bindings: {
-                    'closethis': function(t) {
-                        console.log(t);
-                        if(t.find("i")){
-                            t.find("i").trigger("click");
-                        }
-                    },
-                    'closeall': function(t) {
-                        alert('Trigger was '+t.id+'\nAction was Email');
-                    },
-                }
-            });*/
-        });
-        /*个人信息*/
-        function myselfinfo() {
-            layer.open({
-                type: 1,
-                area: ['300px', '200px'],
-                fix: false, //不固定
-                maxmin: true,
-                shade: 0.4,
-                title: '查看信息',
-                content: '<div>管理员信息</div>'
-            });
-        }
-
-        /*资讯-添加*/
-        function article_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*图片-添加*/
-        function picture_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*产品-添加*/
-        function product_add(title, url) {
-            var index = layer.open({
-                type: 2,
-                title: title,
-                content: url
-            });
-            layer.full(index);
-        }
-        /*用户-添加*/
-        function member_add(title, url, w, h) {
-            layer_show(title, url, w, h);
-        }
-
-
-    </script>
-    @*<div>
-            @RenderBody()
-        </div>*@
 </body>
 </html>
