--- a/RF_WEB/Views/Shared/_menu.cshtml
+++ b/RF_WEB/Views/Shared/_menu.cshtml
@@ -1,4 +1,10 @@
-﻿<aside class="Hui-aside">
+﻿<script type="text/javascript">
+    $(function () {
+        alert("1111");
+    });
+</script>
+
+<aside class="Hui-aside">
     <div class="menu_dropdown bk_2">
         <dl id="menu-article">
             <dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
