--- a/RF_WEB/Views/Shared/_menu.cshtml
+++ b/RF_WEB/Views/Shared/_menu.cshtml
@@ -1,12 +1,8 @@
-﻿<aside class="Hui-aside">
+﻿
+
+<aside class="Hui-aside">
     <div class="menu_dropdown bk_2">
-        <dl id="menu-manage">
-            <dt><i class="Hui-iconfont">&#xe616;</i> 导航管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
-            <dd>
-                <ul>
-                </ul>
-            </dd>
-        </dl>
+
         <dl id="menu-article">
             <dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
