--- a/RF_WEB/Views/Shared/_menu.cshtml
+++ b/RF_WEB/Views/Shared/_menu.cshtml
@@ -1,8 +1,21 @@
-﻿
+﻿@model  IEnumerable<RF_WEB.Models.PageMenu>
 
 <aside class="Hui-aside">
     <div class="menu_dropdown bk_2">
-
+        <dl id="menu-article">
+            <dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+            <dd>
+                <ul>
+                    @if (Model != null)
+                    {
+                        foreach (var item in Model)
+                        {
+                            <li><a data-href="@item.Url" data-title="资讯管理" href="javascript:void(0)">@item.Name</a></li>
+                        }
+                    }
+                </ul>
+            </dd>
+        </dl>
         <dl id="menu-article">
             <dt><i class="Hui-iconfont">&#xe616;</i> 资讯管理<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
             <dd>
