--- a/RF_WEB/Views/Manage/ReliefRecord.cshtml
+++ b/RF_WEB/Views/Manage/ReliefRecord.cshtml
@@ -55,134 +55,53 @@
                     </tr>
                 </thead>
                 @*<tbody>
-                    @if (Model != null)
-        {
-            foreach (var item in Model)
-            {
-                <tr class="text-c">
-                    <td><input type="checkbox" value="" name=""></td>
-                    <td>@item.RecordID</td>
-                    <td class="text-l">@item.CarCode</td>
-                    <td>行业动态</td>
-                    <td>H-ui</td>
-                    <td>@item.InTime</td>
-                    <td>@item.ChannelID</td>
-                    <td class="td-status"><span class="label label-success radius">已发布</span></td>
-                    <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-                </tr>
-            }
-        }
-        <tr class="text-c">
-                <td><input type="checkbox" value="" name=""></td>
-                <td>10001</td>
-                <td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯标题</u></td>
-                <td>行业动态</td>
-                <td>H-ui</td>
-                <td>2014-6-11 11:11:42</td>
-                <td>21212</td>
-                <td class="td-status"><span class="label label-success radius">已发布</span></td>
-                <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-            </tr>
-            <tr class="text-c">
-                <td><input type="checkbox" value="" name=""></td>
-                <td>10002</td>
-                <td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10002')" title="查看">资讯标题</u></td>
-                <td>行业动态</td>
-                <td>H-ui</td>
-                <td>2014-6-11 11:11:42</td>
-                <td>21212</td>
-                <td class="td-status"><span class="label label-success radius">草稿</span></td>
-                <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_shenhe(this,'10001')" href="javascript:;" title="审核">审核</a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
-            </tr>
-                </tbody>*@
+                                @if (Model != null)
+                    {
+                        foreach (var item in Model)
+                        {
+                            <tr class="text-c">
+                                <td><input type="checkbox" value="" name=""></td>
+                                <td>@item.RecordID</td>
+                                <td class="text-l">@item.CarCode</td>
+                                <td>行业动态</td>
+                                <td>H-ui</td>
+                                <td>@item.InTime</td>
+                                <td>@item.ChannelID</td>
+                                <td class="td-status"><span class="label label-success radius">已发布</span></td>
+                                <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+                            </tr>
+                        }
+                    }
+                    <tr class="text-c">
+                            <td><input type="checkbox" value="" name=""></td>
+                            <td>10001</td>
+                            <td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10001')" title="查看">资讯标题</u></td>
+                            <td>行业动态</td>
+                            <td>H-ui</td>
+                            <td>2014-6-11 11:11:42</td>
+                            <td>21212</td>
+                            <td class="td-status"><span class="label label-success radius">已发布</span></td>
+                            <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_stop(this,'10001')" href="javascript:;" title="下架"><i class="Hui-iconfont">&#xe6de;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+                        </tr>
+                        <tr class="text-c">
+                            <td><input type="checkbox" value="" name=""></td>
+                            <td>10002</td>
+                            <td class="text-l"><u style="cursor:pointer" class="text-primary" onClick="article_edit('查看','article-zhang.html','10002')" title="查看">资讯标题</u></td>
+                            <td>行业动态</td>
+                            <td>H-ui</td>
+                            <td>2014-6-11 11:11:42</td>
+                            <td>21212</td>
+                            <td class="td-status"><span class="label label-success radius">草稿</span></td>
+                            <td class="f-14 td-manage"><a style="text-decoration:none" onClick="article_shenhe(this,'10001')" href="javascript:;" title="审核">审核</a> <a style="text-decoration:none" class="ml-5" onClick="article_edit('资讯编辑','article-add.html','10001')" href="javascript:;" title="编辑"><i class="Hui-iconfont">&#xe6df;</i></a> <a style="text-decoration:none" class="ml-5" onClick="article_del(this,'10001')" href="javascript:;" title="删除"><i class="Hui-iconfont">&#xe6e2;</i></a></td>
+                        </tr>
+                            </tbody>*@
             </table>
         </div>
     </div>
-    <!--_footer 作为公共模版分离出去-->
-    <script type="text/javascript" src="~/Content/lib/jquery/1.9.1/jquery.min.js"></script>
-    <script type="text/javascript" src="~/Content/lib/layer/2.4/layer.js"></script>
-    <script type="text/javascript" src="~/Content/h-ui/js/H-ui.min.js"></script>
-    <script type="text/javascript" src="~/Content/h-ui.admin/js/H-ui.admin.js"></script> <!--/_footer 作为公共模版分离出去-->
-    <!--请在下方写此页面业务相关的脚本-->
+    @RenderPage("~/Views/Shared/_footer.cshtml")
     <script type="text/javascript" src="~/Content/lib/My97DatePicker/4.8/WdatePicker.js"></script>
     <script type="text/javascript" src="~/Content/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
     <script type="text/javascript" src="~/Content/lib/laypage/1.2/laypage.js"></script>
-    <script type="text/javascript">
-        //$('.table-sort').dataTable({
-        //    "aaSorting": [[1, "desc"]],//默认第几个排序
-        //    "bStateSave": true,//状态保存
-        //    "pading": false,
-        //    "aoColumnDefs": [
-        //        //{"bVisible": false, "aTargets": [ 3 ]} //控制列的隐藏显示
-        //        { "orderable": false, "aTargets": [0, 8] }// 不参与排序的列
-        //    ]
-        //});
-        function InitData() {
-            var dutyTable = $(".table-sort").dataTable({
-                "destroy": true,       //销毁表格对象
-                "aLengthMenu": [5, 10],  //用户可自选每页展示数量 5条或10条
-                "searching": false,//禁用搜索（搜索框）
-                "lengthChange": true,
-                "paging": true,//开启表格分页
-                "bProcessing": true,
-                "bServerSide": true,
-                "bAutoWidth": false,
-                //"sort" : "position",
-                "deferRender": true,//延迟渲染
-                //"bStateSave" : false, //在第三页刷新页面，会自动到第一页
-                //"retrieve" : true,       //类似单例模式，重复利用以存在对象。
-                "iDisplayLength": 5,
-                "iDisplayStart": 0,
-                "select": {
-                    style: 'os',
-                    selector: 'td:first-child'
-                },
-                "ordering": false,//全局禁用排序
-                "serverSide": true,
-                "sAjaxSource": "@Url.Action("Reliefs", "Manage")",
-                "fnServerData": function (sSource, aoData, fnCallback) {
-                    aoData.push({ "name": "strname", "value": "11212" });
-                    $.ajax({
-                        "dataType": 'json',
-                        "type": "POST",
-                        "url": sSource,
-                        "data": aoData,
-                        "success": fnCallback
-                    });
-                },
-                "aoColumns": [
-                    { "mDataProp": "RecordID", "width": "50" },
-                    { "mDataProp": "CarCode", "width": "400" },
-                    { "mDataProp": "RecordID", "width": "200" },
-                    { "mDataProp": "CarCode", "width": "100" },
-                    { "mDataProp": "CarCode", "width": "100" },
-                    { "mDataProp": "RecordID", "width": "100" },
-                    { "mDataProp": "CarCode", "width": "100" },
-                    { "mDataProp": "RecordID", "width": "100" },
-                    { "mDataProp": "CarCode", "width": "100" }
-                ],
-                "oLanguage": { // 国际化配置
-                    "sProcessing": "正在获取数据，请稍后...",
-                    "sLengthMenu": "显示 _MENU_ 条",
-                    "sZeroRecords": "没有找到数据",
-                    "sInfo": "从 _START_ 到  _END_ 条记录 总记录数为 _TOTAL_ 条",
-                    "sInfoEmpty": "记录数为0",
-                    "sInfoFiltered": "(全部记录数 _MAX_ 条)",
-                    "sInfoPostFix": "",
-                    "sSearch": "查询",
-                    "sUrl": "",
-                    "oPaginate": {
-                        "sFirst": "第一页",
-                        "sPrevious": "上一页",
-                        "sNext": "下一页",
-                        "sLast": "最后一页"
-                    }
-                },
-            });
-        };
-        $(function () {
-            InitData();
-        });
-    </script>
+    <script type="text/javascript" src="~/Scripts/js_reliefrecord.js"></script>
 </body>
 </html>
