--- a/RF_WEB/Views/Manage/ReliefRecord.cshtml
+++ b/RF_WEB/Views/Manage/ReliefRecord.cshtml
@@ -32,26 +32,25 @@
         <div class="text-c">
             <button onclick="removeIframe()" class="btn btn-primary radius">关闭选项卡</button>
             日期范围：
-            <input type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="logmin" class="input-text Wdate" style="width:120px;">
+            <input type="text" onfocus="WdatePicker({ maxDate:'#F{$dp.$D(\'logmax\')||\'%y-%M-%d\'}' })" id="wdatemin" class="input-text Wdate" style="width:120px;">
             -
-            <input type="text" onfocus="WdatePicker({ minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d' })" id="logmax" class="input-text Wdate" style="width:120px;">
+            <input type="text" onfocus="WdatePicker({ minDate:'#F{$dp.$D(\'logmin\')}',maxDate:'%y-%M-%d' })" id="wdatemax" class="input-text Wdate" style="width:120px;">
             <input type="text" name="" id="" placeholder=" 资讯名称" style="width:250px" class="input-text">
-            <button name="" id="" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜索</button>
+            <button name="" id="btnsearch" class="btn btn-success" type="submit"><i class="Hui-iconfont">&#xe665;</i> 搜索</button>
         </div>
         <div class="cl pd-5 bg-1 bk-gray mt-20"> <span class="l"> <i class="Hui-iconfont">&#xe600;</i></span> <span class="r">共有数据：<strong>54</strong> 条</span> </div>
         <div class="mt-20">
             <table class="table table-border table-bordered table-bg table-hover table-sort table-responsive">
                 <thead>
                     <tr class="text-c">
-                        <th width="25"><input type="checkbox" name="" value=""></th>
-                        <th width="80">ID</th>
-                        <th>标题</th>
-                        <th width="80">分类</th>
-                        <th width="80">来源</th>
-                        <th width="120">更新时间</th>
-                        <th width="75">浏览次数</th>
-                        <th width="60">发布状态</th>
-                        <th width="120">操作</th>
+                        <th>车牌号码</th>
+                        <th>进场时间</th>
+                        <th>减免开始时间</th>
+                        <th>减免结束时间</th>
+                        <th>操作员</th>
+                        <th>操作时间</th>
+                        <th>收费员</th>
+                        <th>使用时间</th>
                     </tr>
                 </thead>
                 @*<tbody>
